--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,14 @@ body {
     margin: 0 auto;
 }
 
-.main-header .container {
+.header-layout {
     display: flex;
     justify-content: space-between;
+}
+
+.main-header__logo-img {
+    width: 100%;
+    height: auto;
 }
 
 .navbar {
