--- a/css/dance.css
+++ b/css/dance.css
@@ -1,6 +1,121 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400');
+
+/*** HELPERS AND SETUP ***/
+
+body {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+    font-weight: 300;
+}
+
+.container {
+    width: 80%;
+    margin: 0 auto;
+}
+
+
+
+.carousel__control {
+    position: absolute;
+    top: 250px;
+    font-size: 3rem;
+}
+
+.carousel__control--left-caret {
+    left: 40px;
+}
+
+.carousel__control--right-caret {
+    right: 40px;
+}
+.carousel__slider {
+    position: absolute;
+    top: 500px;
+    left: 50%;
+}
+.carousel__slide {
+    width: 20px;
+    height: 20px;
+    border-radius: 10px;
+    border: 3px solid #fff;
+}
+
 /*** HERO ***/
 
 .hero {
-    height: 600px;
+    height: 550px;
+    background: url('../img/chris-yang-501380-unsplash.jpg') center center no-repeat;
+    background-size: cover;
+    text-transform: uppercase;
+    color: #fff;
+    transition: all 0.25s;
 }
 
+.hero-carousel {
+    width: 40%;
+    margin-top: 13rem;
+   text-align: right;
+}
+
+.hero-carousel__title {
+    line-height: 3rem;
+    font-weight: 400;
+    margin-bottom: 1.25rem;
+}
+
+
+.navbar-wrapper {
+    padding-top: 0.75rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.navbar {
+    list-style: none;
+    display: flex;
+}
+
+.navbar__item {
+    margin-right: 1.5rem;
+    font-size: 0.65rem;
+}
+
+.navbar__item--last {
+    margin-right: 0;
+}
+
+.navbar__link {
+    color: #fff;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+
+
+/*** BUTTONS ***/
+
+.btn {
+    background: none;
+    color: #fff;
+    border: 2px solid #fff;
+    padding: 0.5rem 1.25rem;
+    font-size: .8rem;
+    text-transform: uppercase;
+    cursor: pointer;
+    transition: all 0.5s;
+}
+
+.btn:hover {
+    background: #fff;
+    color: #333;
+    border-color: #333;
+}
