--- a/css/dance.css
+++ b/css/dance.css
@@ -84,26 +84,39 @@ h1, h2, h3, h4, h5, h6 {
     padding: 5rem 0;
 }
 
-.info__card {
+.card {
     display: flex;
     width: 100%;
     max-height: 20rem;
     border: 10px solid #CFD9F3;
+    margin-bottom: 5rem;
 }
 
-.info__image {
+.card--even {
+    border: none;
+}
+
+.card__image {
     width: 100%;
     height: auto;
     flex: 4;
 }
 
-.info__description {
+.card__image--even {
+    order: 2;
+}
+
+.card__description {
     flex: 6;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     padding: 1.4rem 0 1.4rem 3rem;
 
+}
+
+.card__description--even{
+    order: 1;
 }
 
 .card__header {
@@ -113,14 +126,27 @@ h1, h2, h3, h4, h5, h6 {
     color: #555;
 }
 
+.card__text {
+    font-size: 0.8rem;
+    line-height: 1.4rem;
+    padding-right: 6rem;
+}
+
 .program__pages {
     list-style: none;
     margin: 0;
     padding: 0;
 }
 .program__link {
-    font-size: .8rem;
+    font-size: 0.8rem;
     color: #777;
+}
+
+/*** EVENT-CALENDAR ***/
+
+.event-calendar__wrapper {
+    background-color: #CFD9F3;
+    height: 300px;
 }
 
 /*** CAROUSEL ***/
@@ -207,7 +233,7 @@ h1, h2, h3, h4, h5, h6 {
 .btn--info {
     color: #999;
     border-color: #777;
-    max-width: 30%;
+    max-width: 35%;
 }
 
 
@@ -224,7 +250,4 @@ h1, h2, h3, h4, h5, h6 {
         margin: 0 auto;
     }
 
-    .carousel__images {
-        
-    }
 }
