--- a/css/dance.css
+++ b/css/dance.css
@@ -21,6 +21,12 @@ h1, h2, h3, h4, h5, h6 {
     margin: 0 auto;
 }
 
+.section__heading {
+    line-height: 3rem;
+    font-weight: 400;
+    margin-bottom: 1.25rem;
+}
+
 
 /*** NAVBAR ***/
 
@@ -69,12 +75,6 @@ h1, h2, h3, h4, h5, h6 {
     margin-top: 13rem;
    text-align: right;
    z-index: 30;
-}
-
-.hero__title {
-    line-height: 3rem;
-    font-weight: 400;
-    margin-bottom: 1.25rem;
 }
 
 
@@ -145,6 +145,7 @@ h1, h2, h3, h4, h5, h6 {
 /*** EVENT-CALENDAR ***/
 .event-calendar {
     background-color: #CFD9F3;
+    padding-top: 3rem;
 }
 .event-calendar__wrapper {
     height: 300px;
@@ -244,9 +245,6 @@ h1, h2, h3, h4, h5, h6 {
 /*** MEDIA QUERIES ***/
 
 @media screen and (min-width:1100px) {
-    body {
-      
-    }
     .hero, .about, .carousel__images, .event-calendar {
 
         width: 1100px;
