--- a/css/dance.css
+++ b/css/dance.css
@@ -90,7 +90,7 @@ h1, h2, h3, h4, h5, h6 {
     display: flex;
     width: 100%;
     max-height: 20rem;
-    border: 10px solid #CFD9F3;
+    border: 10px solid #d0dff6;
     margin-bottom: 5rem;
 }
 
@@ -146,7 +146,7 @@ h1, h2, h3, h4, h5, h6 {
 
 /*** EVENT-CALENDAR ***/
 .event-calendar {
-    background-color: #CFD9F3;
+    background-color: #eef5ff;
     padding: 5rem 0;
 }
 .event-calendar__title {
@@ -259,7 +259,7 @@ h1, h2, h3, h4, h5, h6 {
 
 /*** FOOTER ***/
 .footer {
-    background-color: #CFD9F3;
+    background-color: #eef5ff;
 }
 
 .footer__wrapper {
@@ -271,6 +271,9 @@ h1, h2, h3, h4, h5, h6 {
 .footer__title {
     margin: 0;
     padding: 0;
+    text-transform: uppercase;
+    font-size: 1rem;
+    font-weight: bold;
 }
 
 
@@ -307,12 +310,23 @@ h1, h2, h3, h4, h5, h6 {
     margin: 0;
     padding: 0;
     font-size: 0.7rem;
+    line-height: 0.9rem;
     color: #333;
     text-decoration: none;
 }
 
 .contact-info__email {
     cursor: pointer;
+}
+
+.footer__social-media {
+    display: flex;
+    justify-content: space-around;
+}
+
+.fa {
+    margin: 0 0.5rem;
+    color: #7f8082;
 }
 
 /*** CAROUSEL ***/
