adds smaller imgs, refactors about us section

--- a/css/dance.css
+++ b/css/dance.css
@@ -104,6 +104,20 @@ img {
     margin-bottom: 5rem;
 }
 
+.programs__background {
+    background: url('../img/programs.png') center center no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+}
+ 
+.little-grazias__background {
+    background: url('../img/little_grazias.png') center center no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+}
+
 .card--even {
     border: none;
 }
@@ -152,30 +166,6 @@ img {
     color: #777;
 }
 
-
-@media screen and (max-width: 500px) {
-    .card {
-        flex-wrap: wrap;
-        max-height: 100%;
-    }
-    .card__image, 
-    .card__description {
-        width: 100%;
-        padding: 0;
-    }
-    .card__image {
-        height: 100%;
-    }
-    .card__image--even,
-    .card__description--even {
-        order: 0;
-        width: 100%;
-    } 
-    .card__text {
-        padding: 0;
-    }
-
-}
 
 /*** EVENT-CALENDAR ***/
 .event-calendar {
@@ -479,6 +469,50 @@ img {
 
         width: 1100px;
         margin: 0 auto;
+    }
+
+}
+
+@media screen and (max-width: 800px) {
+    .card__text {
+        padding: 0;
+        margin: 0;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .carousel__panel--1 {
+        background-image: url('../img/chris-yang-501380-unsplash-600.jpg');
+    }
+    .carousel__panel--2 {
+        background-image: url('../img/photo-1508807526345-15e9b5f4eaff-600.jpg');
+    }
+    .carousel__panel--3 {
+        background-image: url('../img/david-hofmann-579796-unsplash-600.jpg');
+    }
+
+}
+
+@media screen and (max-width: 500px) {
+    .card {
+        flex-wrap: wrap;
+        max-height: 100%;
+    }
+    .card__image, 
+    .card__description {
+        width: 100%;
+        padding: 0;
+    }
+    .card__image {
+        height: 100%;
+    }
+    .card__image--even,
+    .card__description--even {
+        order: 0;
+        width: 100%;
+    } 
+    .card__text {
+        padding: 0;
     }
 
 }
