--- a/css/dance.css
+++ b/css/dance.css
@@ -99,7 +99,7 @@ img {
 .card {
     display: flex;
     width: 100%;
-    max-height: 20rem;
+    min-height: 300px;
     border: 10px solid #d0dff6;
     margin-bottom: 5rem;
 }
