--- a/css-playground/css/santa.css
+++ b/css-playground/css/santa.css
@@ -5,3 +5,14 @@
 body {
     background-color: #333;
 }
+
+.container {
+    width: 400px;
+    height: 400px;
+    position: absolute;
+    border-radius: 50%;
+    background-color: #58ff49;
+    top: 30%;
+    left: 50%;
+    transform:translate(50%, 50%);
+}
