--- a/css/chicago.css
+++ b/css/chicago.css
@@ -1,3 +1,16 @@
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+.container {
+  width: 95%;
+  margin: 0 auto;
+}
+
+/*** NAVBAR ***/
+
 .navbar-wrapper {
     display: flex;
   }
@@ -7,4 +20,24 @@
     display: flex;
     padding: 0;
     margin: 0;
+  }
+
+  /*** CARDS ***/
+  .card {
+    width: 30%;
+  }
+
+
+  /*** INFORMATION SECTION ***/
+
+  .info__cards {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  /*** ABOUT SECTION ***/
+
+  .about__cards {
+    display: flex;
+    justify-content: space-around;
   }
