--- a/css/dance.css
+++ b/css/dance.css
@@ -475,7 +475,7 @@ img {
 
 @media screen and (max-width: 800px) {
     .card__text {
-        padding: 0;
+        padding: 0 1rem 0 0;
         margin: 0;
     }
 }
@@ -490,18 +490,21 @@ img {
     .carousel__panel--3 {
         background-image: url('../img/david-hofmann-579796-unsplash-600.jpg');
     }
+    .btn {
+        width: 100px;
+    }
 
 }
 
 @media screen and (max-width: 500px) {
     .card {
+        align-content: flex-start;
         flex-wrap: wrap;
         max-height: 100%;
     }
     .card__image, 
     .card__description {
         width: 100%;
-        padding: 0;
     }
     .card__image {
         height: 100%;
@@ -515,4 +518,22 @@ img {
         padding: 0;
     }
 
+    .btn {
+        width: 50%;
+    }
+
+}
+
+@media screen and (max-width: 375px) {
+    .card {
+    min-height: inherit;
+    }
+    .card__description {
+        display: block;
+    }
+
+    .btn {
+        margin: 1rem 0;
+        width: 80%;
+    }
 }
